add render recipe

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         </p>
       </div>
 
-      <div class="recipe">
+      <div id="recipe" class="recipe">
         <div class="message">
           <div>
             <svg>
